--- a/paper-prototype/index.html
+++ b/paper-prototype/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Exercise 1</title>
-	<link rel="stylesheet" href="writeup.css">
-</head>
-<body>
-	<!-- your html here -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Exercise 1</title>
+    <link rel="stylesheet" href="writeup.css" />
+  </head>
+  <body>
+    <!-- your html here -->
+    <h1>Paper Prototype for chat-app</h1>
+    <p>
+      Improvement: Users can send and receive messages in different languages.
+      The application offers automatic translation when users define their
+      preferred language in the language settings. In addition to the preferred
+      language, users can also customize other chat options.
+    </p>
+    <div class="images_">
+      <div class="img">
+        <img
+          src="file/IMG_5225.jpeg"
+          alt="paper screen shot image of a chat app"
+        />
+      </div>
+      <div class="img">
+        <img
+          src="file/IMG_5226.jpeg"
+          alt="paper screen shot image of a chat app"
+        />
+      </div>
+      <div class="img">
+        <img
+          src="file/IMG_5227.jpeg"
+          alt="paper screen shot image of a chat app"
+        />
+      </div>
+      <div class="img">
+        <img
+          src="file/IMG_5228.jpeg"
+          alt="paper screen shot image of a chat app"
+        />
+      </div>
+      <div class="img">
+        <img
+          src="file/IMG_5229.jpeg"
+          alt="paper screen shot image of a chat app"
+        />
+      </div>
+      <div class="img">
+        <img
+          src="file/IMG_5230.jpeg"
+          alt="paper screen shot image of a chat app"
+        />
+      </div>
+      <div class="img">
+        <img
+          src="file/IMG_5231.jpeg"
+          alt="paper screen shot image of a chat app"
+        />
+      </div>
+      <div class="img">
+        <img
+          src="file/IMG_5232.jpeg"
+          alt="paper screen shot image of a chat app"
+        />
+      </div>
+      <div class="img">
+        <img
+          src="file/IMG_5233.jpeg"
+          alt="paper screen shot image of a chat app"
+        />
+      </div>
+      <div class="img">
+        <img
+          src="file/IMG_5234.jpeg"
+          alt="paper screen shot image of a chat app"
+        />
+      </div>
+    </div>
+    <p>Here is the Video demo</p>
+    <div>
+      <video class="Video_">
+        <source src="file/IMG_5223.mp4" type="video/mp4" />
+        <source src="file/IMG_5223.mp4" type="video/webm" />
+        <source src="file/IMG_5223.mp4" type="video/quicktime" />
+      </video>
+    </div>
+  </body>
 </html>
