--- a/bookmarklet/index.html
+++ b/bookmarklet/index.html
@@ -5,16 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remove Elements Bookmarklet</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/themes/prism.css"
-      rel="stylesheet"
-    />
-    <!-- <link rel="stylesheet" href="./prism/prism.css" /> -->
+    <link rel="stylesheet" href="./prism/prism.css" />
+    <link rel="stylesheet" href="writeup.css" />
   </head>
   <body>
     <h1>Remove Elements Bookmarklet</h1>
     <p>
-      Drag the link to your bookmarks toolbar:
+      Drag and Drop the link to your bookmarks toolbar:
       <a
         href="javascript:(function() {
 					document.body.style.paddingTop = '20px';
@@ -29,7 +26,8 @@
 						btn.style.position = 'fixed';
 						btn.style.top = '10px';
 						btn.style.zIndex = '999999';
-						btn.style.backgroundColor = 'Red';
+						btn.style.color = 'Blue';
+						btn.style.backgroundColor = 'Orange';
 						btn.style.border = '1px solid black';
 						btn.style.padding = '5px';
 						btn.style.marginRight = '10px';
@@ -51,6 +49,7 @@
 						endButton.remove();
 						document.removeEventListener('mousemove', highlightElement);
 					});
+
 				
 					endButton.style.left = 'calc(10px + ' + undoButton.offsetWidth + 'px)';
 				
@@ -87,19 +86,20 @@
 						if (event.key === 'Escape') {
 							removalActive = false;
 							undoButton.remove();
-							endButton.remove();
 							document.removeEventListener('mousemove', highlightElement);
 						}
 					});
 				})();
 				"
-        >Remove Elements</a
+        >Remove_Bookmark</a
       >
     </p>
     <h2>Bookmarklet Code</h2>
     <pre><code class="language-javascript">
 			<!-- display Bookmarklet Code  -->
 			javascript:(function() {
+				document.body.style.paddingTop = '20px';
+
 				var removedElements = [];
 				var removalActive = true;
 				var currentHighlightedElement;
@@ -110,7 +110,8 @@
 					btn.style.position = 'fixed';
 					btn.style.top = '10px';
 					btn.style.zIndex = '999999';
-					btn.style.backgroundColor = 'white';
+					btn.style.color = 'Blue';
+					btn.style.backgroundColor = 'Orange';
 					btn.style.border = '1px solid black';
 					btn.style.padding = '5px';
 					btn.style.marginRight = '10px';
@@ -132,6 +133,7 @@
 					endButton.remove();
 					document.removeEventListener('mousemove', highlightElement);
 				});
+
 			
 				endButton.style.left = 'calc(10px + ' + undoButton.offsetWidth + 'px)';
 			
@@ -168,7 +170,6 @@
 					if (event.key === 'Escape') {
 						removalActive = false;
 						undoButton.remove();
-						endButton.remove();
 						document.removeEventListener('mousemove', highlightElement);
 					}
 				});
@@ -176,7 +177,7 @@
 			
 
     </code></pre>
-    <h2>Tested Websites</h2>
+    <h2>5-Tested Websites</h2>
     <ul>
       <li>
         <a href="https://www.nytimes.com/" target="_blank"
@@ -196,9 +197,6 @@
         <a href="https://www.wikipedia.org/" target="_blank">Wikipedia</a>
       </li>
     </ul>
-    <!-- <script src="./prism/prism.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/components/prism-core.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/components/prism-clike.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/components/prism-javascript.min.js"></script>
+    <script src="./prism/prism.js"></script>
   </body>
 </html>
