--- a/user-testing/index.html
+++ b/user-testing/index.html
@@ -7,5 +7,196 @@
   </head>
   <body>
     <!-- your html here -->
+    <h1>User Testing</h1>
+    <article>
+      <article>
+        <h2>Language Translation Button</h2>
+        <p>
+          <span> Goal:</span> My Goal was to test the usability and
+          effectiveness of the language-translation feature in the chat app by
+          having the user translate a message into a language they understand.
+        </p>
+        <p>
+          <span> Rationale:</span> This task helps me assess how well users can
+          navigate and use the language translation button and whether they can
+          translate messages into the correct language without confusion.
+        </p>
+      </article>
+      <article>
+        <h2>Customize Language setting</h2>
+        <p>
+          <span> Goal:</span> my goal was to test how well a user can use the
+          chat setting to customize the language settings. i.e., I want to
+          understand how well users can use the chat setting to select and save
+          a preferred language for translation in the chat app.
+        </p>
+
+        <p>
+          <span> Rationale:</span> This task helps me to assess the usability of
+          the language settings feature and how well users can customize their
+          language preferences to suit their needs.
+        </p>
+      </article>
+      <article>
+        <h2>Long-press Translation</h2>
+        <p>
+          <span> Goal:</span> my goal was to test the effectiveness and
+          usability of the long-press method for translation by having users
+          translate a message using long-press and select translate from the
+          menu that follows the long press.
+        </p>
+        <p>
+          <span> Rationale:</span> This task helps me to assess how well users
+          can navigate and use the long-press method for translation and whether
+          they can successfully translate the message into the language of their
+          choice
+        </p>
+      </article>
+      <br />
+      <article>
+        <h2>Observation, Insight, and Plans for Change</h2>
+        <br />
+        <h3>1. Observation</h3>
+        <h4>User-1 Language Translation</h4>
+        <ul>
+          <li>
+            The user needed help finding the language translation button on the
+            paper prototype because it needed to be clearly labeled. The user
+            required some guidance to locate the button and use the feature to
+            translate the message.
+          </li>
+          <li>
+            The user Suggested adding a clear Label or icon to the language
+            translation button would make it easier to locate and use on the
+            paper prototype.
+          </li>
+          <li>
+            The user also commented that the list of languages to choose from
+            after selecting the language translation button needed to be shorter
+            and more organized, making it easier to select the language.
+          </li>
+        </ul>
+
+        <h4>User-2 Customize language setting</h4>
+        <ul>
+          <li>
+            The user takes time to find the chat setting at the top of the
+            screen. Once the user identified the setting icon, they could
+            complete most of the tasks with little to no help.
+          </li>
+          <li>
+            The user suggested that adding a clear label, Making the setting
+            icon bigger, or separating the icon from other interfaces would make
+            locating and using the paper prototype easier.
+          </li>
+          <li>
+            The User also added that the process for setting a preferred
+            language could have been more intuitive for first-time users.
+          </li>
+        </ul>
+
+        <h4>User-3 Long-press Translation</h4>
+        <ul>
+          <li>
+            This user needed help figuring out where to start and asked for
+            guidance on where to start the translation process. When the user
+            was told to long press, they expressed they had that in mind but
+            were unsure.
+          </li>
+          <li>
+            The user suggested a Help section. They said a written help guide
+            might be useful, especially when users are stuck. They can look up
+            the help section and learn how to proceed.
+          </li>
+        </ul>
+
+        <h3>2. Insight</h3>
+        <p>From my observation, I gained the following insights:</p>
+        <ul>
+          <li>
+            Clear labeling and visual cues are critical for helping users locate
+            and use the language translation button, language settings feature,
+            and long-press translation option on the paper prototype.
+          </li>
+          <li>
+            Users may need help navigating long lists of languages and may
+            require additional organization or search functionality to find the
+            languages easily.
+          </li>
+          <li>
+            Although it may seem challenging to achieve the final product, I
+            want to mention users' concerns about translation accuracy. The
+            users raise an issue of translation accuracy before responding in
+            another language.
+          </li>
+        </ul>
+        <h3>Plans for Change</h3>
+        <ul>
+          <li>
+            Add clear labels or icons to the language translation button and
+            language settings button option to improve their learnability and
+            pleasant user experience.
+          </li>
+          <li>
+            Separate the language settings feature from other interface elements
+            and provide more guidance to help users customize their language
+            preferences.
+          </li>
+          <li>
+            Provide additional organization or search functionality to help
+            users navigate long lists of languages when translating a message.
+          </li>
+          <li>
+            Conduct further user testing to evaluate the effectiveness of the
+            changes I will make to improve the usability of my language
+            translation features.
+          </li>
+        </ul>
+        <p>
+          Finally, the user testing with a paper prototype gave me valuable
+          insight into the usability of my chat app's language translation
+          feature. I plan to use this insight to make appropriate adjustments to
+          the paper prototype to create a better user experience for users who
+          may have difficulties understanding how to interact with the language
+          translation feature.
+        </p>
+      </article>
+    </article>
+    <div class="video_">
+      <h3>Videos from user testing</h3>
+      <p>Test-1</p>
+      <video controls>
+        <source src="video/IMG_5221.MOV" type="video/quicktime" />
+        Your browser does not support the video tag.
+      </video>
+      <br />
+      <p>Test-2</p>
+      <video controls>
+        <source src="video/IMG_5218.MOV" type="video/quicktime" />
+        Your browser does not support the video tag.
+      </video>
+      <br />
+      <p>Test-3</p>
+      <video controls>
+        <source src="video/IMG_5237.MOV" type="video/quicktime" />
+        Your browser does not support the video tag.
+      </video>
+    </div>
+    <div class="image_">
+      <h3>Appendex</h3>
+      <p>Hand written raw user testing note screen shot:</p>
+      <img
+        src="image/img_1.jpeg"
+        alt="Paper prototype raw user testing note screen shot for test-1"
+      />
+      <img
+        src="image/img_2.jpeg"
+        alt="Paper prototype raw user testing note screen shot for test-2"
+      />
+      <img
+        src="image/img_3.jpeg"
+        alt="Paper prototype raw user testing note screen shot for test-3"
+      />
+    </div>
   </body>
 </html>
