--- a/paper-prototype/index.html
+++ b/paper-prototype/index.html
@@ -77,12 +77,11 @@
       </div>
     </div>
     <p>Here is the Video demo</p>
-    <div>
-      <video class="Video_">
-        <source src="file/IMG_5223.mp4" type="video/mp4" />
-        <source src="file/IMG_5223.mp4" type="video/webm" />
-        <source src="file/IMG_5223.mp4" type="video/quicktime" />
-      </video>
-    </div>
+    <!-- <video src="file/IMG_5223.mp4"></video> -->
+    <video controls>
+      <source src="file/IMG_5223.mp4" type="video/quicktime" />
+      <source src="file/IMG_5223.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
   </body>
 </html>
