submission ready file

--- a/hw-feedback/index.html
+++ b/hw-feedback/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Exercise 6: Feedback on HW7</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Exercise 6: Feedback on HW7</title>
+  </head>
+  <body>
+    <h1>Feedback on HW7</h1>
 
-  <h1>Feedback on HW7</h1>
+    <p>This homework took me a total of <strong> 11 </strong> hours.</p>
 
-  <p>This homework took me a total of <strong>___</strong> hours.
+    <h2>What I liked</h2>
 
-  <h2>What I liked</h2>
+    <p>
+      Paper prototype designing was fun and made me think outside of the box
+    </p>
 
-  <p>...</p>
+    <h2>What I didn’t like</h2>
 
-  <h2>What I didn’t like</h2>
+    <p>None</p>
 
-  <p>...</p>
+    <h2>What was difficult</h2>
 
-  <h2>What was difficult</h2>
+    <p>None</p>
 
-  <p>...</p>
+    <h2>What I learned</h2>
 
-  <h2>What I learned</h2>
-
-  <p>...</p>
-
-</body>
+    <p>
+      Designing on paper is a great way to learn the usability and Heuristics of
+      our designs. I have learned the flaws on my initial designs and realized I
+      need to put more time on the design before going to make the actual
+      product.
+    </p>
+  </body>
 </html>
